; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_share.c_curl_share_init.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_share.c_curl_share_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_share = type { i32, i32 }

@CURL_LOCK_DATA_SHARE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.Curl_share* @curl_share_init() #0 {
  %1 = alloca %struct.Curl_share*, align 8
  %2 = alloca %struct.Curl_share*, align 8
  %3 = call %struct.Curl_share* @calloc(i32 1, i32 8)
  store %struct.Curl_share* %3, %struct.Curl_share** %2, align 8
  %4 = load %struct.Curl_share*, %struct.Curl_share** %2, align 8
  %5 = icmp ne %struct.Curl_share* %4, null
  br i1 %5, label %6, label %21

6:                                                ; preds = %0
  %7 = load i32, i32* @CURL_LOCK_DATA_SHARE, align 4
  %8 = shl i32 1, %7
  %9 = load %struct.Curl_share*, %struct.Curl_share** %2, align 8
  %10 = getelementptr inbounds %struct.Curl_share, %struct.Curl_share* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = or i32 %11, %8
  store i32 %12, i32* %10, align 4
  %13 = load %struct.Curl_share*, %struct.Curl_share** %2, align 8
  %14 = getelementptr inbounds %struct.Curl_share, %struct.Curl_share* %13, i32 0, i32 1
  %15 = call i64 @Curl_mk_dnscache(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %6
  %18 = load %struct.Curl_share*, %struct.Curl_share** %2, align 8
  %19 = call i32 @free(%struct.Curl_share* %18)
  store %struct.Curl_share* null, %struct.Curl_share** %1, align 8
  br label %23

20:                                               ; preds = %6
  br label %21

21:                                               ; preds = %20, %0
  %22 = load %struct.Curl_share*, %struct.Curl_share** %2, align 8
  store %struct.Curl_share* %22, %struct.Curl_share** %1, align 8
  br label %23

23:                                               ; preds = %21, %17
  %24 = load %struct.Curl_share*, %struct.Curl_share** %1, align 8
  ret %struct.Curl_share* %24
}

declare dso_local %struct.Curl_share* @calloc(i32, i32) #1

declare dso_local i64 @Curl_mk_dnscache(i32*) #1

declare dso_local i32 @free(%struct.Curl_share*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
